# Adds all python sources in the current directory to the python installation
python_sources = [
    '__init__.py',
    'cd_monitors.py',
    'cd_solve.py',
    'dense.py',
    'multigrid.py',
    'opfilt_kk.py',
    'opfilt_pp.py',
    'opfilt_tp.py',
    'opfilt_tt.py',
    'template_removal.py',
    'util_alm.py',
    'util.py',
]

py.install_sources(
    python_sources,
    subdir: 'plancklens/qcinv'
)
